<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res/com.example.owen.weathergo"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.main.activity.WeatherMain">
        <!--Toolbar-->
        <include
            android:id="@+id/tl_custom"
            layout="@layout/custom_toolbar" />


        <RelativeLayout
            android:id="@+id/weather_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tl_custom"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/weather_img"
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:src="@drawable/weather" />


            <TextView
                android:id="@+id/weather_temp_max"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="right"
                android:text="@string/hsh_temp_max"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/weather_temp_max"
                android:text="@string/hsh_temperature"
                android:textSize="48dp" />

            <TextView
                android:id="@+id/weather_temp_min"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/weather_temp_max"
                android:layout_marginTop="30dp"
                android:gravity="right"
                android:text="@string/hsh_temp_min"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/weather_country_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/weather_temp_min"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/weather_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hsh_wind_speed" />

                <TextView
                    android:id="@+id/weather_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:text="@string/hsh_country" />
            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_country_wind"
                android:visibility="gone">

            </android.support.v4.view.ViewPager>

        </RelativeLayout>


        <EditText
            android:id="@+id/hsh_weather_city_editview"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/weather_info"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="城市"
            android:visibility="gone" />


        <Button
            android:id="@+id/hsh_search_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_info"
            android:layout_toRightOf="@id/hsh_weather_city_editview"
            android:text="@string/weather"
            android:visibility="gone" />
        <!--<android.support.design.widget.FloatingActionButton
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".MyActivity"/>-->

        <TextView
            android:id="@+id/weather_suggesstions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hsh_search_weather"
            android:layout_margin="16dp"
            android:visibility="gone" />


        <ListView
            android:id="@+id/weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hsh_search_weather"
            android:divider="#FFCC00">

        </ListView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:backgroundTint="@color/cardview_light_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weather_touxiang"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:src="@drawable/snowman" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="切换登陆"
            android:textSize="16dp" />

        <ListView
            android:id="@+id/lv_left_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:divider="@null"
            android:text="DrawerLayout" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout><!--DrawerLayout-->

