<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/about_margin_bottom"
    android:paddingEnd="@dimen/about_padding"
    android:paddingStart="@dimen/about_padding"
    android:paddingTop="@dimen/about_padding_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/about_drawable_padding"
            android:gravity="center"
            android:text="很高兴认识你"
            android:textColor="@color/aboutIcon"
            android:textSize="@dimen/about_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/about_margin_bottom"
            android:layout_marginStart="@dimen/view_margin_start"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="@dimen/about_lineSpacingExtra"
            android:text="@string/about_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/view_margin_bottom"
            android:layout_marginStart="@dimen/view_margin_start"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@color/lineColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_me_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/about_me_padding"
            android:gravity="center"
            android:text="为了更好的自己"
            android:textColor="@color/aboutIcon"
            android:textSize="@dimen/about_me_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/view_margin_bottom"
            android:layout_marginStart="@dimen/view_margin_start"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="@dimen/about_lineSpacingExtra"
            android:text="about" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="@dimen/about_lineSpacingExtra"
            android:text="@string/author" />

        <TextView
            android:id="@+id/e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/e_mail" />

        <TextView
            android:textColor="@color/aboutIcon"
            android:id="@+id/feed_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/feedback" />
    </LinearLayout>
</LinearLayout>